# AiflightAgentTravel

./: README.md  main.py  pyproject.toml
app/agents/: budget_agent.py  flight_agent.py  hotel_agent.py  optimizer_agent.py  travel_agent.py
app/graph/: travel_graph.py
app/llm/: client.py
app/parsers/: trip_parser.py
app/prompts/: correction_prompt.py  travel_prompt.py
app/schemas/: trip.py
app/state/: travel_state.py
frontend/: main.py
